refactor: FSDに基づいてlayoutをsharedに移動

--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -1,11 +1,11 @@
 ---
 import type { CollectionEntry } from "astro:content";
 import type { GetStaticPathsOptions, Page } from "astro";
-import Author from "../../components/ui/author.astro";
 import Pagination from "../../components/ui/pagination/pagination.astro";
+import Author from "../../entities/author/ui/author/index.astro";
 import { getBlogs } from "../../features/blog/model/blog";
 import BlogCard from "../../features/blog/ui/blog-card.astro";
-import Document from "../../layouts/document.astro";
+import Document from "../../shared/ui/layout/document/index.astro";
 
 export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
   return paginate(await getBlogs(), { pageSize: 50 });
