--- a/src/pages/talk/index.astro
+++ b/src/pages/talk/index.astro
@@ -1,6 +1,6 @@
 ---
 import TalkCard from "../../features/talk/talk-card.astro";
-import Document from "../../layouts/document.astro";
+import Document from "../../shared/ui/layout/document/index.astro";
 
 import { getTalks, groupByTalkYear } from "../../features/talk/talks";
 
