--- a/src/components/ui/header.astro
+++ b/src/components/ui/header.astro
@@ -1,7 +1,7 @@
 ---
+import ThemeSelector from "../../widgets/theme/ui/theme-selector/index.astro";
 import Link from "./link.astro";
 import SiteLogo from "./site-logo/site-logo.astro";
-import ThemeSelector from "./theme-selector.astro";
 ---
 
 <header class="border-b border-muted-foreground pb-4 sm:pb-0">
