--- a/src/widgets/theme/ui/theme-selector/index.astro
+++ b/src/widgets/theme/ui/theme-selector/index.astro
@@ -1,48 +1,25 @@
+---
+import StyledIcon from "../../../../shared/ui/styled-icon/index.astro";
+import Moon from "./moon.svg";
+import Sun from "./sun.svg";
+---
+
 <theme-toggle class="relative h-6 w-6">
   <button
     id="toggle-theme"
-    class="group hover:opacity-70 cursor-pointer"
-    aria-label="Toggle Theme"
+    type="button"
+    class="group cursor-pointer"
+    aria-label="テーマを切り替える"
     transition:persist
   >
-    <span
-      class="absolute left-0 right-0 top-0 opacity-0 group-aria-pressed:opacity-100 text-muted"
+    <StyledIcon class="absolute inset-0 hidden group-aria-[pressed=true]:block">
+      <Sun aria-label="ダークテーマに切り替える" class="text-muted" />
+    </StyledIcon>
+    <StyledIcon
+      class="absolute inset-0 hidden group-aria-[pressed=false]:block"
     >
-      <svg
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        xmlns="http://www.w3.org/2000/svg"
-        ><g
-          fill="none"
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          ><circle cx="12" cy="12" r="4"></circle><path
-            d="M12 2v2m0 16v2M4.93 4.93l1.41 1.41m11.32 11.32l1.41 1.41M2 12h2m16 0h2M6.34 17.66l-1.41 1.41M19.07 4.93l-1.41 1.41"
-          ></path></g
-        ></svg
-      >
-    </span>
-
-    <span
-      class="absolute left-0 right-0 top-0 opacity-0 group-aria-[pressed=false]:opacity-100 text-muted"
-    >
-      <svg
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        xmlns="http://www.w3.org/2000/svg"
-        ><path
-          fill="none"
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M12 3a6 6 0 0 0 9 9a9 9 0 1 1-9-9"></path></svg
-      >
-    </span>
+      <Moon aria-label="ライトテーマに切り替える" class="text-muted" />
+    </StyledIcon>
   </button>
 </theme-toggle>
 
