--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -1,8 +1,7 @@
 ---
 import { render } from "astro:content";
 import Document from "../../app/ui/layout/document/index.astro";
-// import { Icon } from "astro-icon/components";
-import Author from "../../components/ui/author.astro";
+import Author from "../../entities/author/ui/author/index.astro";
 import { getBlogs } from "../../features/blog/model/blog";
 import DraftBadge from "../../features/blog/ui/DraftBadge.astro";
 import Blog from "../../features/blog/ui/blog.astro";
