refactor: 画像をコロケーション

--- a/src/app/ui/layout/document/index.astro
+++ b/src/app/ui/layout/document/index.astro
@@ -2,11 +2,11 @@
 import "./globalStyles.css";
 import "../../../../styles/global.css";
 import { ClientRouter } from "astro:transitions";
-import ogImage from "../../../../assets/ogp.png";
 import Footer from "../../../../components/ui/footer.astro";
 import Header from "../../../../components/ui/header.astro";
 import { SITE } from "../../../../shared/config/site";
 import ThemeProvider from "../../../../widgets/theme/provider/index.astro";
+import ogImage from "./ogp.png";
 
 type Props = {
   title?: string;
