--- a/src/app/ui/layout/document/index.astro
+++ b/src/app/ui/layout/document/index.astro
@@ -1,6 +1,6 @@
 ---
 import "./globalStyles.css";
-import "../../../../styles/global.css";
+import "./global.css";
 import { ClientRouter } from "astro:transitions";
 import Footer from "../../../../components/ui/footer.astro";
 import Header from "../../../../components/ui/header.astro";
