--- a/src/features/talk/talk.astro
+++ b/src/features/talk/talk.astro
@@ -1,6 +1,6 @@
 ---
 import Time from "../../components/ui/time.astro";
-import "../../stylesheet/markdown.css";
+import "../../shared/ui/markdown/index.css";
 
 interface Props {
   title: string;
