--- a/src/features/blog/ui/blog.astro
+++ b/src/features/blog/ui/blog.astro
@@ -1,7 +1,7 @@
 ---
 import type { MarkdownHeading } from "astro";
 import Time from "../../../components/ui/time.astro";
-import "../../../stylesheet/markdown.css";
+import "../../../shared/ui/markdown/index.css";
 import Toc from "./toc.astro";
 
 interface Props {
