--- a/src/app/ui/layout/document/index.astro
+++ b/src/app/ui/layout/document/index.astro
@@ -2,9 +2,9 @@
 import "./globalStyles.css";
 import "./global.css";
 import { ClientRouter } from "astro:transitions";
-import Footer from "../../../../components/ui/footer.astro";
 import Header from "../../../../components/ui/header.astro";
 import { SITE } from "../../../../shared/config/site";
+import Footer from "../../../../widgets/footer/index.astro";
 import ThemeProvider from "../../../../widgets/theme/provider/index.astro";
 import ogImage from "./ogp.png";
 
