refactor: layoutでしか使わないheaderをコロケーション

--- a/src/widgets/layout/document/footer/copyright.astro
+++ b/src/widgets/layout/document/footer/copyright.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE } from "../../shared/config/site";
+import { SITE } from "../../../../shared/config/site";
 
 const { publishedYear, author } = SITE;
 const today = new Date();
