--- a/src/widgets/layout/document/footer/index.astro
+++ b/src/widgets/layout/document/footer/index.astro
@@ -1,6 +1,6 @@
 ---
-import SocialIcon from "../../entities/author/ui/social-icon/index.astro";
-import RssIcon from "../../features/rss/ui/icon.astro";
+import SocialIcon from "../../../../entities/author/ui/social-icon/index.astro";
+import RssIcon from "../../../../features/rss/ui/icon.astro";
 import Copyright from "./copyright.astro";
 ---
 
