--- a/src/widgets/layout/document/header/index.astro
+++ b/src/widgets/layout/document/header/index.astro
@@ -1,6 +1,6 @@
 ---
-import ThemeSelector from "../../features/select-theme/ui/theme-selector/index.astro";
-import Link from "./link.astro";
+import ThemeSelector from "../../../../features/select-theme/ui/theme-selector/index.astro";
+import Link from "../../../../shared/ui/link/index.astro";
 import SiteLogo from "./site-logo/site-logo.astro";
 ---
 
