--- a/src/widgets/layout/document/header/site-logo/site-logo.astro
+++ b/src/widgets/layout/document/header/site-logo/site-logo.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE } from "../../../shared/config/site";
+import { SITE } from "../../../../../shared/config/site";
 ---
 
 <h1 class="text-heading-20 tracking-wider">
