refactor: sharedのlinkを使うようにする

--- a/src/components/ui/pagination/page-selector.astro
+++ b/src/components/ui/pagination/page-selector.astro
@@ -3,7 +3,7 @@ import type { CollectionKey } from "astro:content";
 import type { Page } from "astro";
 import { Icon } from "astro-icon/components";
 import { cn } from "../../../shared/lib/cn";
-import Link from "../link.astro";
+import Link from "../../../shared/ui/link/index.astro";
 
 type Props = {
   page: Page;
