--- a/src/components/ui/pagination/page-turner.astro
+++ b/src/components/ui/pagination/page-turner.astro
@@ -1,7 +1,7 @@
 ---
 import type { Page } from "astro";
 import { Icon } from "astro-icon/components";
-import Link from "../link.astro";
+import Link from "../../../shared/ui/link/index.astro";
 
 type Props = Pick<Page, "url">;
 
