--- a/src/features/blog/ui/blog-card.astro
+++ b/src/features/blog/ui/blog-card.astro
@@ -1,6 +1,6 @@
 ---
 import type { CollectionEntry } from "astro:content";
-import Time from "../../../components/ui/time.astro";
+import Time from "../../../shared/ui/time/index.astro";
 import { buildUrl } from "../../blog/model/blog";
 
 type Props = {
