--- a/src/features/blog/ui/blog.astro
+++ b/src/features/blog/ui/blog.astro
@@ -1,6 +1,6 @@
 ---
 import type { MarkdownHeading } from "astro";
-import Time from "../../../components/ui/time.astro";
+import Time from "../../../shared/ui/time/index.astro";
 import "../../../shared/ui/markdown/index.css";
 import Toc from "./toc.astro";
 
