--- a/src/features/talk/talk.astro
+++ b/src/features/talk/talk.astro
@@ -1,5 +1,5 @@
 ---
-import Time from "../../components/ui/time.astro";
+import Time from "../../shared/ui/time/index.astro";
 import "../../shared/ui/markdown/index.css";
 
 interface Props {
