--- a/src/features/talk/talk-card.astro
+++ b/src/features/talk/talk-card.astro
@@ -1,7 +1,7 @@
 ---
 import type { CollectionEntry } from "astro:content";
 import Image from "astro/components/Image.astro";
-import Time from "../../components/ui/time.astro";
+import Time from "../../shared/ui/time/index.astro";
 import { buildUrl, getTalkId } from "./talks";
 
 type Props = {
