refactor: PaginationをFSDに基づいて移動

--- a/src/features/pagination/ui/page-selector.astro
+++ b/src/features/pagination/ui/page-selector.astro
@@ -27,7 +27,7 @@ const isLastPage = page.currentPage === page.lastPage;
 >
   <button
     type="button"
-    class="group/button peer grid grid-flow-col items-center gap-1 hover:opacity-80"
+    class="group/button peer grid grid-flow-col items-center gap-1 hover:opacity-80 cursor-pointer"
     id="page-selector"
     aria-expanded="false"
     aria-haspopup="true"
