--- a/src/features/blog/ui/toc.astro
+++ b/src/features/blog/ui/toc.astro
@@ -11,7 +11,7 @@ const titleId = scope("toc");
 const { headings } = Astro.props;
 ---
 
-<div class="sticky top-4">
+<div>
   <div>
     <nav aria-labelledby={titleId}>
       <h2
