--- a/src/entities/blog/ui/blog-card/index.astro
+++ b/src/entities/blog/ui/blog-card/index.astro
@@ -1,8 +1,8 @@
 ---
 import type { CollectionEntry } from "astro:content";
 import { $path } from "astro-typesafe-routes/path";
-import Link from "../../../shared/ui/link/index.astro";
-import Time from "../../../shared/ui/time/index.astro";
+import Link from "../../../../shared/ui/link/index.astro";
+import Time from "../../../../shared/ui/time/index.astro";
 
 type Props = {
   blog: CollectionEntry<"blog">;
