--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -1,10 +1,10 @@
 ---
-import { getBlogs } from "../../features/blog/model/blog";
+import { listBlog } from "../../entities/blog/api";
 import Blog from "../../features/blog/ui/blog.astro";
 import Document from "../../widgets/layout/document/index.astro";
 
 export async function getStaticPaths() {
-  const blogEntries = await getBlogs();
+  const blogEntries = await listBlog();
   return blogEntries.map((entry) => ({
     params: { id: entry.id },
     props: { entry },
