refactor: トーク関連の整理

--- a/src/features/talk/ui/talk.astro
+++ b/src/features/talk/ui/talk.astro
@@ -1,7 +1,7 @@
 ---
-import Time from "../../shared/ui/time/index.astro";
-import "../../shared/ui/markdown/index.css";
-import Author from "../../entities/author/ui/author/index.astro";
+import Time from "../../../shared/ui/time/index.astro";
+import "../../../shared/ui/markdown/index.css";
+import Author from "../../../entities/author/ui/author/index.astro";
 
 interface Props {
   title: string;
