--- a/src/entities/talk/ui/talk-card/index.astro
+++ b/src/entities/talk/ui/talk-card/index.astro
@@ -1,16 +1,16 @@
 ---
 import type { CollectionEntry } from "astro:content";
 import Image from "astro/components/Image.astro";
-import Link from "../../shared/ui/link/index.astro";
-import Time from "../../shared/ui/time/index.astro";
-import { getTalkId } from "./talks";
+import Link from "../../../../shared/ui/link/index.astro";
+import Time from "../../../../shared/ui/time/index.astro";
+import { TalkID } from "./../../model/schema";
 
 type Props = {
   talk: CollectionEntry<"talks">;
 };
 
 const { talk } = Astro.props as Props;
-const id = getTalkId(talk);
+const id = TalkID(talk);
 const image = talk.data.enclosures.at(0);
 ---
 
