--- a/src/widgets/layout/document/footer/index.astro
+++ b/src/widgets/layout/document/footer/index.astro
@@ -1,7 +1,7 @@
 ---
-import SocialIcon from "../../../../entities/author/ui/social-icon/index.astro";
 import RssIcon from "../../../../features/rss/ui/icon.astro";
 import Copyright from "./copyright.astro";
+import SocialIcon from "./social-icon/index.astro";
 ---
 
 <footer class="bg-background border-t border-muted-foreground">
